fix title wrapping

--- a/_sass/_wax.scss
+++ b/_sass/_wax.scss
@@ -59,6 +59,7 @@ header & nav bar
     font-weight: 700;
     color: $accent-light;
     font-size: 2rem;
+    white-space: normal;
   }
 
   .navbar-brand:hover {
